start of details page

--- a/src/components/Breadcrumbs.astro
+++ b/src/components/Breadcrumbs.astro
@@ -14,7 +14,7 @@ const { crumbs } = Astro.props;
 const pageTitles: { [key: string]: string } = {
   'work': 'My Work',
   'thoughts': 'My Thoughts',
-  'about': 'About Me',
+  'about': 'About',
 }
 
 // Get the current page title from pageTitles if it exists, otherwise use the last crumb's text
