--- a/src/layouts/TwoColumnLayout.astro
+++ b/src/layouts/TwoColumnLayout.astro
@@ -67,13 +67,13 @@ const {
     @apply w-screen h-screen flex gap-8 mx-auto;
   }
   .left-column {
-    @apply w-1/3 p-20 flex flex-col items-center justify-center gap-10 relative z-10;
+    @apply w-2/5 p-20 flex flex-col items-center justify-center gap-10 relative z-10;
   }
   .left-column--contents {
     @apply w-full min-h-[400px] min-w-[400px] max-w-fit mx-auto;
   }
   .right-column {
-    @apply flex-1 py-20 flex flex-col items-start justify-center gap-10 overflow-scroll relative my-auto z-10 hide-scrollbar;
+    @apply flex-1 flex flex-col items-start justify-center gap-10 overflow-scroll relative my-auto z-10 hide-scrollbar;
   }
   .subtitle {
     @apply mt-2;
