quality of life improvements

--- a/src/components/Breadcrumbs.astro
+++ b/src/components/Breadcrumbs.astro
@@ -12,8 +12,8 @@ const { crumbs } = Astro.props;
 
 // Object to map page keys to display titles
 const pageTitles: { [key: string]: string } = {
-  'work': 'My Work',
-  'thoughts': 'My Thoughts',
+  'work': 'Work',
+  'thoughts': 'Thoughts',
   'about': 'About',
 }
 
