--- a/src/pages/thoughts.astro
+++ b/src/pages/thoughts.astro
@@ -5,7 +5,7 @@ import { thoughts } from '../data/thoughts';
 
 const breadcrumbs = [
   { text: 'Karina Tovar', href: '/' },
-  { text: 'My Thoughts', href: '/thoughts' },
+  { text: 'Thoughts', href: '/thoughts' },
 ];
 
 const allCategories = [...new Set(thoughts.flatMap(thought => thought.categories))];
