--- a/src/pages/work.astro
+++ b/src/pages/work.astro
@@ -6,7 +6,7 @@ import { workProjects } from '../data/workProjects';
 
 const breadcrumbs = [
   { text: 'Karina Tovar', href: '/' },
-  { text: 'My Work', href: '/work' },
+  { text: 'Work', href: '/work' },
 ];
 
 // Group projects by year and sort years in descending order
