--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -9,7 +9,7 @@ const breadcrumbs = [
 <DetailsLayout
   layout_body_classes="bg-[url('/hero.png')] bg-cover"
   title="About Me"
-  showcaseImage="https://placehold.co/1600x600"
+  showcaseImage="/blog-01.png"
   breadcrumbs={breadcrumbs}
   additionalClasses=""
   asideTitle={{
@@ -18,47 +18,30 @@ const breadcrumbs = [
   }}
   subtitle="Published from Notion"
 >
-
-  <section class="flex-1 w-full flex flex-col gap-3 justify-center">
-    <p>I was in grad school in 2013 working on a project and became obsessed with rotary phones. The anatomy of these old phones is a work of art. People used to be wired to these machines. They would tilt their heads while holding the phone between their ear and their neck. It forced you to feel its weight. It forced you to feel the weight of having a conversation.</p>
-    <p>There was something about that which obsessed me. The idea. No. The problem that we were losing our humanity to technology by always having to be live. Not knowing how to live.</p>
-    <p>So I spent months testing people’s interactions with public phones. Building prototypes for the inner workings between a Raspberry Pi and the Twillio API. All so I could make a phone bench that would ring my phone when people sat. All so I could talk to strangers. All so I could help make their day better.</p>
-
-    <p>I was in grad school in 2013 working on a project and became obsessed with rotary phones. The anatomy of these old phones is a work of art. People used to be wired to these machines. They would tilt their heads while holding the phone between their ear and their neck. It forced you to feel its weight. It forced you to feel the weight of having a conversation.</p>
-    <p>There was something about that which obsessed me. The idea. No. The problem that we were losing our humanity to technology by always having to be live. Not knowing how to live.</p>
-    <p>So I spent months testing people’s interactions with public phones. Building prototypes for the inner workings between a Raspberry Pi and the Twillio API. All so I could make a phone bench that would ring my phone when people sat. All so I could talk to strangers. All so I could help make their day better.</p>
-
-    <p>I was in grad school in 2013 working on a project and became obsessed with rotary phones. The anatomy of these old phones is a work of art. People used to be wired to these machines. They would tilt their heads while holding the phone between their ear and their neck. It forced you to feel its weight. It forced you to feel the weight of having a conversation.</p>
-    <p>There was something about that which obsessed me. The idea. No. The problem that we were losing our humanity to technology by always having to be live. Not knowing how to live.</p>
-    <p>So I spent months testing people’s interactions with public phones. Building prototypes for the inner workings between a Raspberry Pi and the Twillio API. All so I could make a phone bench that would ring my phone when people sat. All so I could talk to strangers. All so I could help make their day better.</p>
-
-    <p>I was in grad school in 2013 working on a project and became obsessed with rotary phones. The anatomy of these old phones is a work of art. People used to be wired to these machines. They would tilt their heads while holding the phone between their ear and their neck. It forced you to feel its weight. It forced you to feel the weight of having a conversation.</p>
-    <p>There was something about that which obsessed me. The idea. No. The problem that we were losing our humanity to technology by always having to be live. Not knowing how to live.</p>
-    <p>So I spent months testing people’s interactions with public phones. Building prototypes for the inner workings between a Raspberry Pi and the Twillio API. All so I could make a phone bench that would ring my phone when people sat. All so I could talk to strangers. All so I could help make their day better.</p>
-
-    <p>I was in grad school in 2013 working on a project and became obsessed with rotary phones. The anatomy of these old phones is a work of art. People used to be wired to these machines. They would tilt their heads while holding the phone between their ear and their neck. It forced you to feel its weight. It forced you to feel the weight of having a conversation.</p>
-    <p>There was something about that which obsessed me. The idea. No. The problem that we were losing our humanity to technology by always having to be live. Not knowing how to live.</p>
-    <p>So I spent months testing people’s interactions with public phones. Building prototypes for the inner workings between a Raspberry Pi and the Twillio API. All so I could make a phone bench that would ring my phone when people sat. All so I could talk to strangers. All so I could help make their day better.</p>
-
-    <p>I was in grad school in 2013 working on a project and became obsessed with rotary phones. The anatomy of these old phones is a work of art. People used to be wired to these machines. They would tilt their heads while holding the phone between their ear and their neck. It forced you to feel its weight. It forced you to feel the weight of having a conversation.</p>
-    <p>There was something about that which obsessed me. The idea. No. The problem that we were losing our humanity to technology by always having to be live. Not knowing how to live.</p>
-    <p>So I spent months testing people’s interactions with public phones. Building prototypes for the inner workings between a Raspberry Pi and the Twillio API. All so I could make a phone bench that would ring my phone when people sat. All so I could talk to strangers. All so I could help make their day better.</p>
-
-    <p>I was in grad school in 2013 working on a project and became obsessed with rotary phones. The anatomy of these old phones is a work of art. People used to be wired to these machines. They would tilt their heads while holding the phone between their ear and their neck. It forced you to feel its weight. It forced you to feel the weight of having a conversation.</p>
-    <p>There was something about that which obsessed me. The idea. No. The problem that we were losing our humanity to technology by always having to be live. Not knowing how to live.</p>
-    <p>So I spent months testing people’s interactions with public phones. Building prototypes for the inner workings between a Raspberry Pi and the Twillio API. All so I could make a phone bench that would ring my phone when people sat. All so I could talk to strangers. All so I could help make their day better.</p>
-
+  <section class="block">
+    <h2>It All Started with a Phone</h2>
     <p>I was in grad school in 2013 working on a project and became obsessed with rotary phones. The anatomy of these old phones is a work of art. People used to be wired to these machines. They would tilt their heads while holding the phone between their ear and their neck. It forced you to feel its weight. It forced you to feel the weight of having a conversation.</p>
     <p>There was something about that which obsessed me. The idea. No. The problem that we were losing our humanity to technology by always having to be live. Not knowing how to live.</p>
     <p>So I spent months testing people’s interactions with public phones. Building prototypes for the inner workings between a Raspberry Pi and the Twillio API. All so I could make a phone bench that would ring my phone when people sat. All so I could talk to strangers. All so I could help make their day better.</p>
   </section>
+  <section class="block">
+    <h2>My Design Tenets</h2>
+    <p>At the end of the day helping products grow and become profitable is key to helping users be happy on their day to day and while interacting with your features. If your product sucks. No one will buy it. </p>
+  </section>
+  <section class="block">
+    <h2>It All Started with a Phone</h2>
+    <p>I was in grad school in 2013 working on a project and became obsessed with rotary phones. The anatomy of these old phones is a work of art. People used to be wired to these machines. They would tilt their heads while holding the phone between their ear and their neck. It forced you to feel its weight. It forced you to feel the weight of having a conversation.</p>
+    <p>There was something about that which obsessed me. The idea. No. The problem that we were losing our humanity to technology by always having to be live. Not knowing how to live.</p>
+    <p>So I spent months testing people’s interactions with public phones. Building prototypes for the inner workings between a Raspberry Pi and the Twillio API. All so I could make a phone bench that would ring my phone when people sat. All so I could talk to strangers. All so I could help make their day better.</p>
+  </section>
+  <section class="block">
+    <h2>My Design Tenets</h2>
+    <p>At the end of the day helping products grow and become profitable is key to helping users be happy on their day to day and while interacting with your features. If your product sucks. No one will buy it. </p>
+  </section>
 </DetailsLayout>
 
 <style>
-  .section {
-    @apply w-full flex flex-col gap-8;
-  }
-  .wrapper {
-    @apply flex-1 flex m-20;
+  .block {
+    @apply flex-1 w-full flex flex-col gap-3 justify-center mb-20;
   }
 </style>
