--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,5 +1,6 @@
 ---
 import DetailsLayout from '../layouts/DetailsLayout.astro';
+import SectionBlock from '../components/SectionBlock.astro';
 const breadcrumbs = [
   { text: 'Karina Tovar', href: '/' },
   { text: 'About', href: '/about' },
@@ -18,30 +19,24 @@ const breadcrumbs = [
   }}
   subtitle="Published from Notion"
 >
-  <section class="block">
-    <h2>It All Started with a Phone</h2>
+  <SectionBlock title="It All Started with a Phone">
     <p>I was in grad school in 2013 working on a project and became obsessed with rotary phones. The anatomy of these old phones is a work of art. People used to be wired to these machines. They would tilt their heads while holding the phone between their ear and their neck. It forced you to feel its weight. It forced you to feel the weight of having a conversation.</p>
     <p>There was something about that which obsessed me. The idea. No. The problem that we were losing our humanity to technology by always having to be live. Not knowing how to live.</p>
-    <p>So I spent months testing people’s interactions with public phones. Building prototypes for the inner workings between a Raspberry Pi and the Twillio API. All so I could make a phone bench that would ring my phone when people sat. All so I could talk to strangers. All so I could help make their day better.</p>
-  </section>
-  <section class="block">
-    <h2>My Design Tenets</h2>
-    <p>At the end of the day helping products grow and become profitable is key to helping users be happy on their day to day and while interacting with your features. If your product sucks. No one will buy it. </p>
-  </section>
-  <section class="block">
-    <h2>It All Started with a Phone</h2>
+    <p>So I spent months testing people's interactions with public phones. Building prototypes for the inner workings between a Raspberry Pi and the Twillio API. All so I could make a phone bench that would ring my phone when people sat. All so I could talk to strangers. All so I could help make their day better.</p>
+  </SectionBlock>
+  
+  <SectionBlock title="My Design Tenets">
+    <p>At the end of the day helping products grow and become profitable is key to helping users be happy on their day to day and while interacting with your features. If your product sucks. No one will buy it.</p>
+  </SectionBlock>
+
+  <SectionBlock title="It All Started with a Phone">
     <p>I was in grad school in 2013 working on a project and became obsessed with rotary phones. The anatomy of these old phones is a work of art. People used to be wired to these machines. They would tilt their heads while holding the phone between their ear and their neck. It forced you to feel its weight. It forced you to feel the weight of having a conversation.</p>
     <p>There was something about that which obsessed me. The idea. No. The problem that we were losing our humanity to technology by always having to be live. Not knowing how to live.</p>
-    <p>So I spent months testing people’s interactions with public phones. Building prototypes for the inner workings between a Raspberry Pi and the Twillio API. All so I could make a phone bench that would ring my phone when people sat. All so I could talk to strangers. All so I could help make their day better.</p>
-  </section>
-  <section class="block">
-    <h2>My Design Tenets</h2>
-    <p>At the end of the day helping products grow and become profitable is key to helping users be happy on their day to day and while interacting with your features. If your product sucks. No one will buy it. </p>
-  </section>
+    <p>So I spent months testing people's interactions with public phones. Building prototypes for the inner workings between a Raspberry Pi and the Twillio API. All so I could make a phone bench that would ring my phone when people sat. All so I could talk to strangers. All so I could help make their day better.</p>
+  </SectionBlock>
+  
+  <SectionBlock title="My Design Tenets">
+    <p>At the end of the day helping products grow and become profitable is key to helping users be happy on their day to day and while interacting with your features. If your product sucks. No one will buy it.</p>
+  </SectionBlock>
 </DetailsLayout>
 
-<style>
-  .block {
-    @apply flex-1 w-full flex flex-col gap-3 justify-center mb-20;
-  }
-</style>
