quality of life improvements

--- a/src/components/AsideTitle.astro
+++ b/src/components/AsideTitle.astro
@@ -15,9 +15,9 @@ const { line1, line2, additionalClasses = '' } = Astro.props;
 
 <style>
   h1 {
-    @apply text-5xl;
-  }
-  span {
-    @apply leading-tight;
+    @apply text-7xl;
+    span {
+      @apply leading-none;
+    }
   }
 </style>
