--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -4,14 +4,14 @@ import Layout from '../layouts/Layout.astro';
 
 <Layout title="Oops">
   <section class="wrapper">
-    <h1>404: Page Not Found</h1>
-    <p>Sorry, the page you are looking for doesn't exist or has been moved.</p>
-    <a href="/">Go back to homepage</a>
+    <h1>404: Well Shoot</h1>
+    <p>Sorry, I may have missled you.</p>
+    <a href="/" class="underline underline-offset-8 decoration-slate-300">Go back to homepage</a>
   </section>
 </Layout>
 
 <style>
   .wrapper {
-    @apply flex flex-col items-center justify-center min-h-screen
+    @apply flex flex-col items-center justify-center min-h-screen gap-3;
   }
 </style>
