--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -10,7 +10,9 @@ const breadcrumbs = [
 <DetailsLayout
   layout_body_classes="bg-[url('/hero.png')] bg-cover"
   title="About Me"
-  showcaseImage="/blog-01.png"
+  showcaseImage="/phone.png"
+  showcaseImageClasses="max-h-[480px]"
+  showcaseImageAlt="Ord rotary phone seen from above, far away, in a blue calm serene background with desert tones like Dan Flavin. Styled after Tim Walker and James Bidgood."
   breadcrumbs={breadcrumbs}
   additionalClasses=""
   asideTitle={{
