--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -27,7 +27,7 @@ const { title, body_classes = '' } = Astro.props;
 	</head>
 	<body class={`relative min-h-screen ${body_classes}`}>
 		<CoordinateGrid />
-		<div class="content relative z-10">
+		<div class="content relative z-10 w-full h-screen min-h-fit p-12">
 			<slot />
 		</div>
 	</body>
