--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -12,7 +12,7 @@ const breadcrumbs = [
   title="About Me"
   showcaseImage="/phone.png"
   showcaseImageClasses="max-h-[480px]"
-  showcaseImageAlt="Ord rotary phone seen from above, far away, in a blue calm serene background with desert tones like Dan Flavin. Styled after Tim Walker and James Bidgood."
+  showcaseImageAlt="Old rotary phone seen from above, far away, in a blue calm serene background with desert tones like Dan Flavin. Styled after Tim Walker and James Bidgood."
   breadcrumbs={breadcrumbs}
   additionalClasses=""
   asideTitle={{
