change to back button component interactivity

--- a/src/components/BackButton.astro
+++ b/src/components/BackButton.astro
@@ -31,6 +31,6 @@ const { href, text } = Astro.props;
     @apply absolute top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2 w-1 h-1 bg-transparent rounded-full transition-all group-hover:w-full group-hover:h-full group-hover:bg-black delay-300;
   }
   .link-text {
-    @apply underline-offset-8 underline decoration-slate-200 group-hover:decoration-slate-400 delay-300;
+    @apply font-medium group-hover:font-semibold transition-all delay-300;
   }
 </style>
