--- a/src/components/BackButton.astro
+++ b/src/components/BackButton.astro
@@ -11,7 +11,7 @@ const { href, text } = Astro.props;
 
 <a href={href} class="link-wrapper group">
   <span class="button-circle">
-    <Icon.ArrowLeft size="14" class="icon-arrow" />
+    <Icon.ArrowLeft size="18" stroke-width="4" class="icon-arrow" />
     <span class="icon-circle-fill">&nbsp;</span>
   </span>
   <span class="link-text">Back to {text}</span>
