--- a/src/components/Row.astro
+++ b/src/components/Row.astro
@@ -1,45 +1,61 @@
 ---
+import * as Icon from '@astropub/icons'
 interface Props {
   title: string;
   date: string;
   categories: string[];
   href: string;
+  content: string;
 }
 
-const { title, date, categories, href } = Astro.props;
+const { title, date, categories, href, content } = Astro.props;
+console.log('Content received:', content);
 ---
 
 <a 
   href={href} 
-  class="row" 
+  class="row group" 
   data-row 
   data-date={date} 
   data-categories={categories.join(',')}
   transition:persist
   transition:name={`row-${title}`}
 >
-  <div class="marker"></div>
+  
+  {categories.includes('Process') ? (
+    <div class="marker">
+      <Icon.CrumpledPaper size="18" class="group-hover:hidden" />
+      <Icon.RulerHorizontal size="18" class="hidden group-hover:block" />
+    </div>
+  ) : (
+    <div class="marker">
+      <Icon.CrumpledPaper size="18" class="group-hover:hidden" />
+      <Icon.File size="18" class="hidden group-hover:block" />
+    </div>
+  )}
   <div class="details">
     <h3>{title}</h3>
     <p>{date} · {categories.join(', ')}</p>
+    {content && (
+      <div class="teaser">
+        <p>
+          {`${content.slice(0, 100)}...`}
+        </p>
+      </div>
+    )}
   </div>
-  <div class="arrow">
-    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-      <path d="M5 12h14"></path>
-      <path d="m12 5 7 7-7 7"></path>
-    </svg>
-  </div>
+  <span class="arrow">
+    <Icon.ArrowRight size="18" />
+  </span>
 </a>
 
 <style>
   .row {
-    @apply bg-light-paper dark:bg-dark-paper text-light-text dark:text-dark-text p-4 rounded-md w-full max-w-[640px] flex items-start gap-5 border border-light-border dark:border-dark-border transition-all duration-300 ease-in-out hover:shadow-lg hover:-mt-1 hover:mb-1 cursor-pointer;
+    @apply bg-light-paper dark:bg-dark-paper text-light-text dark:text-dark-text p-4 rounded-md w-full max-w-[640px] flex items-start gap-5 border border-light-border dark:border-dark-border transition-all ease-in-out hover:shadow-lg cursor-pointer origin-top;
+    transition: all 3s cubic-bezier(0.23, 1, 0.320, 1);
   }
   .marker {
-    @apply mt-3 block w-3 h-3 min-w-3 min-h-3 rounded-full bg-red-500 transition-all duration-300 ease-in-out;
-  }
-  .row:hover .marker {
-    @apply bg-red-600 scale-110;
+    @apply mt-3 block w-5 h-5 min-w-5 min-h-5 transition-all duration-300 ease-in-out;
   }
   .details {
     @apply py-1 flex-1;
@@ -48,15 +64,24 @@ const { title, date, categories, href } = Astro.props;
     @apply font-medium text-lg transition-colors duration-300 ease-in-out;
   }
   .row:hover .details h3 {
-    @apply text-red-600;
+    @apply text-black;
   }
   .details p {
     @apply text-sm text-gray-600;
   }
   .arrow {
-    @apply text-gray-400 transition-all duration-300 ease-in-out transform translate-x-0 opacity-0;
+    @apply text-white bg-black rounded-full p-2 mt-1 transition-all duration-300 ease-in-out transform translate-x-0 opacity-0;
   }
   .row:hover .arrow {
-    @apply text-red-600 translate-x-1 opacity-100;
+    @apply -translate-x-1 opacity-100;
+  }
+  .teaser {
+    @apply max-h-0 border-l-2 border-gray-200 pl-2 overflow-hidden transition-all duration-300 ease-in-out transform translate-y-0 opacity-0 ;
+  }
+  .row:hover .teaser {
+    @apply translate-y-2 my-1 min-h-fit py-1 opacity-100;
+  }
+  .teaser p {
+    @apply text-sm text-gray-500 line-clamp-3;
   }
 </style>
