--- a/src/pages/thoughts/[slug].astro
+++ b/src/pages/thoughts/[slug].astro
@@ -3,6 +3,7 @@ import BackButton from '../../components/BackButton.astro';
 import Layout from '../../layouts/Layout.astro';
 import { getThoughts, getThoughtContent } from '../../lib/notion';
 import { renderNotionBlock } from '../../lib/notionRenderer';
+import * as Icon from '@astropub/icons'
 
 export async function getStaticPaths() {
   const thoughts = await getThoughts();
@@ -37,16 +38,20 @@ if (!thought) {
     </header>
 
     {thought.showcase && (
-      <div class="showcase-image-wrapper">
-        <img 
-          src={thought.showcase} 
-          alt={thought.title} 
-          class="showcase-image" 
+      <div class="showcase-image-wrapper relative">
+        <img
+          src={thought.showcase}
+          alt={thought.title}
+          class="showcase-image z-10"
         />
+        <div class="absolute m-auto p-4 flex gap-1 items-center justify-center">
+          <Icon.Layers size="14" />
+          <span>Painting...</span>
+        </div>
       </div>
     )}
 
-    <section class="thought-content">
+    <section class="thought-content animate-slide">
       {thought.content.map(block => (
         <Fragment set:html={renderNotionBlock(block)} />
       ))}
@@ -135,24 +140,27 @@ if (!thought) {
   }
 
   .showcase-image-wrapper {
-    @apply rounded-lg min-h-fit flex items-center justify-center border border-white shadow-lg shadow-orange-300 p-2 bg-white w-full;
-    animation: showcase-slow 1s ease-in forwards;
+    @apply rounded-lg min-h-fit flex items-center justify-center border border-white shadow-lg shadow-orange-300 opacity-0 bg-white w-full delay-75;
+    animation: showcase-slow 2s cubic-bezier(0.23, 1, 0.320, 1) forwards;
   }
   .showcase-image {
     @apply max-h-[400px] rounded-md w-full object-cover transition-all;
     transform-origin: top;
-    animation: showcase-reveal 2s ease-in-out forwards;
+    animation: showcase-reveal 1s cubic-bezier(0.23, 1, 0.320, 1) forwards;
   }
 
   @keyframes showcase-slow {
     0% {
       opacity: 0;
+      padding: 0px;
     }
     50% {
       opacity: .5;
+      padding: 0px;
     }
     100% {
       opacity: 1;
+      padding: 20px;
     }
   }
 
@@ -176,6 +184,26 @@ if (!thought) {
       opacity: 1;
       height: auto;
       transform: scaleY(1);
+    }
+  }
+
+  .animate-slide {
+    @apply delay-75;
+    animation: slideIn 1.75s cubic-bezier(0.39, 0.575, 0.565, 1) forwards;
+  }
+
+  @keyframes slideIn {
+    0% {
+      opacity: 0;
+      transform: translateY(20px);
+    }
+    90% {
+      opacity: 0;
+      transform: translateY(15px);
+    }
+    100% {
+      opacity: 1;
+      transform: translateY(0);
     }
   }
 </style>
